服务注册与发现 etcd 客户端和服务端实现

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,14 +19,14 @@ services:
     ports:
       - "6380:6379"
 
-#  etcd:
-#    image: "bitnami/etcd:latest"
-#    restart: always
-#    entrypoint:
-#      - ALLOW_NON_AUTHENTICATION=yes
-#    ports:
-#      - "12379:2379"
-#
+  etcd:
+    image: "bitnami/etcd:latest"
+    restart: always
+    environment:
+      - ALLOW_NONE_AUTHENTICATION=yes
+    ports:
+      - "12379:2379"
+
 #  mongo:
 #    image: mongo:6.0
 #    restart: always
